--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'coretto'
+          distribution: 'corretto'
           java-version: 17
           cache: 'gradle'
           check-latest: true
@@ -72,7 +72,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'coretto'
+          distribution: 'corretto'
           java-version: 17
           cache: 'gradle'
           check-latest: true
