--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -14,8 +14,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'corretto'
-      #          cache: 'gradle'
-      #          check-latest: true
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
@@ -40,13 +38,11 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: '17'
           distribution: 'corretto'
-          java-version: 17
-          cache: 'gradle'
-          check-latest: true
 
-      - name: Setup xvfb and firefox
-        run: sudo apt-get update && sudo apt-get install firefox xvfb -y -f
+      - name: Setup xvfb
+        run: sudo apt-get update && sudo apt-get install xvfb -y -f
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
@@ -72,13 +68,11 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: '17'
           distribution: 'corretto'
-          java-version: 17
-          cache: 'gradle'
-          check-latest: true
 
-      - name: Setup xvfb and firefox
-        run: sudo apt-get update && sudo apt-get install firefox xvfb -y -f
+      - name: Setup xvfb
+        run: sudo apt-get update && sudo apt-get install xvfb -y -f
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
